# Rougelike-SFML

./: .gitignore  CMakeLists.txt
assets/map/: appendLayers.py  appendProp.py  build.sh  test_map.tlm  test_map.yml  test_set.tls  test_set.yml
assets/textures/: blood (Autosaved).piko-png
src/: Application.cpp  Application.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  MapEditor.cpp  MapEditor.hpp  MapEditorState.cpp  MapEditorState.hpp  Math.cpp  Math.hpp  State.hpp  Time.cpp  Time.hpp  Utils.cpp  Utils.hpp  include.hpp  main.cpp
src/Components/: Animator.cpp  Animator.hpp  Collider.cpp  Collider.hpp  CollisionSystems.cpp  CollisionSystems.hpp  Sprite.hpp  SpriteSystems.cpp  SpriteSystems.hpp  Tag.hpp  Transform.hpp
src/ECS/: ComponentRegistry.hpp  ComponentStorage.cpp  ComponentStorage.hpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneRenderer.cpp  SceneRenderer.hpp  System.hpp
src/Gameplay/: AttackHitbox.cpp  AttackHitbox.hpp  BloodEffect.cpp  BloodEffect.hpp  ColliderList.cpp  ColliderList.hpp  CollidersList.hpp  Enemy.cpp  Enemy.hpp  Health.cpp  Health.hpp  Player.cpp  Player.hpp  Tilemap.cpp  Tilemap.hpp
